# holistic-reliability-evaluation

./: .gitignore  .gitmodules  .sherlock_env  README.md  dispatch_adversarial_sweep.sh  dispatch_config.sh  dispatch_model_sweep.sh  download_wilds_data.py  evaluate_all_models.sh  evaluate_ensembles.sh  finetune_experiments.py  pyproject.toml  requirements.txt  setup.py  submit_config.sh  train_all.sh
analysis/: alg_comparisons.jl  ensemble_FOMs.jl  figures_of_merit.jl  merge_and_rewrite_results.jl  plotting_utils.jl  single_model_FOMs.jl  temperature_scaling.jl
configs/: camelyon17-augmix-sweep.yml  camelyon17-augmix.yml  camelyon17-defaults.yml  camelyon17-erm-sweep.yml  camelyon17-finetune-sweep.yml  camelyon17-finetune.yml  config_types.dhall  default_config.dhall  dispatch_adversarial_model_sources_sweep.sh  dispatch_adversarial_params_sweep.sh  dispatch_adversarial_sweep.sh  enums.dhall  erm-sweep.yml  fmow-defaults.yml  fmow-finetune.yml  imports.dhall  iwildcam-adversarial-training.yml  iwildcam-adversarial-training2.yml  iwildcam-defaults.yml  iwildcam-finetune-sweep.yml  iwildcam-finetune.yml  mod0.dhall  mod1.dhall  rxrx1-defaults.yml  rxrx1-finetune.yml  submit_adv_config.sh  types.dhall  utils.dhall
examples/: calibration_curve.py  corruption_examples.py  load_and_analyze_checkpoint.py  plotting.py  process_results.py  run_eval_iwild.py  run_evaluation.py
holistic_reliability_evaluation/: autoattack_eval.py  conf_pred.py  corruptions.py  eval_functions.py  evaluate.py  evaluate_ensembles.py  evaluate_wilds_camelyon17.py  evaluate_wilds_ensembles.py  (+15 more)
(+4544 files in other folders)
