[tool.poetry]
name = "holistic-reliability-evaluation"
version = "0.1.0"
description = ""
authors = ["Anthony Corso <anthonycorso92@gmail.com>"]
readme = "README.md"
packages = [{include = "holistic_reliability_evaluation"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
